# stellar-level-2-challenge

./: .gitignore  README.md  index.html
assets/: index-9vx1wXA0.js  index-BF-sjtol.css  index-BFQIm-Fl.js  index-BYxMDJyB.css  index-BtOvuqXx.js  index-BtQdDMW0.css  index-BueTSpSp.js  index-ChqtA_cu.js  index-D2gl5i9r.js  index-DAHntrri.js  index-DLY6nnDJ.js  index-DOteKsN9.js  index-DVX1HBYw.js  index-hXJuXblz.js  index-u6tjxbpW.js  index-wqtzYfwD.js
contracts/poll/: Cargo.toml
contracts/poll/src/: lib.rs  tests.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CreatePoll.tsx  ErrorBanner.tsx  PollCard.tsx  TransactionStatus.tsx  WalletConnect.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/types/: index.ts
frontend/src/utils/: contract.ts  wallet.ts
scripts/: deploy.js
